[project]
name = "homework2"
version = "0.1.0"
description = "homework2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib<3.9",
    "numpy<2",
    "pandas>=2.3.3",
    "roboticstoolbox-python>=1.1.1",
    "scipy<1.13",
    "spatialmath-python>=1.1.15",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
